--- a/waybar/hypr-style.css
+++ b/waybar/hypr-style.css
@@ -57,10 +57,14 @@ tooltip {
 #battery,
 #pulseaudio,
 #network,
+#custom-temperature,
 #bluetooth,
 #temperature,
 #workspaces,
+#cpu,
+#memory,
 #tray,
+#temperature,
 #language,
 #backlight {
     background: #1e1e2e;
@@ -69,6 +73,21 @@ tooltip {
     margin: 3px 0px;
     margin-top: 10px;
     border: 0px solid #181825;
+}
+
+#custom-temperature {
+    border-radius: 10px 0px 0px 10px;
+}
+
+#cpu {
+    border-radius: 0px 10px 10px 0px;
+    min-width: 40px;
+}
+
+#memory {
+    margin: 3px 0px;
+    margin-top: 10px;
+    border-radius: 0px 0px 0px 0px;
 }
 
 #custom-wallpaper {
@@ -94,7 +113,8 @@ tooltip {
     background: #1e1e2e;
     opacity: 0.7;
     padding: 0px 10px;
-    margin: 3px 10px;
+    margin-right: 0px;
+    margin-left: 10px;
     margin-top: 10px;
     border: 0px solid #181825;
 }
@@ -165,6 +185,7 @@ tooltip {
     border-radius: 10px 0px 0px 10px;
     border-left: 0px;
     border-right: 0px;
+    margin-left: 10px;
 }
 
 #bluetooth {
