--- a/waybar/hypr-style.css
+++ b/waybar/hypr-style.css
@@ -81,7 +81,7 @@ tooltip {
 }
 
 #custom-google_calendar {
-    min-width: 251px;
+    min-width: 301px;
     border-radius: 10px;
     margin-right: 5px;
     margin-left: 5px;
@@ -221,6 +221,7 @@ tooltip {
 }
 
 #network {
+    padding-right: 0px;
     color: #f9e2af;
     border-radius: 10px 0px 0px 10px;
     border-left: 0px;
