--- a/waybar/hypr-style.css
+++ b/waybar/hypr-style.css
@@ -51,6 +51,7 @@ tooltip {
 
 #custom-wallpaper,
 #clock,
+#custom-localtime,
 #custom-power_profile,
 #custom-weather,
 #window,
@@ -166,7 +167,8 @@ tooltip {
     min-width: 20px;
 }
 
-#clock.time {
+#custom-localtime {
+    color: #fab387;
     border-radius: 10px;
     padding: 0px 10px;
     margin-left: 5px;
@@ -227,6 +229,7 @@ tooltip {
     padding-right: 0px;
     color: #f9e2af;
     border-radius: 10px 0px 0px 10px;
+    min-width: 110px;
     border-left: 0px;
     border-right: 0px;
     margin-left: 5px;
