--- a/waybar/hypr-style.css
+++ b/waybar/hypr-style.css
@@ -232,7 +232,7 @@ tooltip {
     padding-right: 0px;
     /* color: #f9e2af; */
     border-radius: 10px 0px 0px 10px;
-    min-width: 210px;
+    /* min-width: 210px; */
     border-left: 0px;
     border-right: 0px;
     margin-left: 5px;
