--- a/wofi/style.css
+++ b/wofi/style.css
@@ -1,8 +1,9 @@
 window {
     margin: 0px;
-    border: 5px solid #1e1e2e;
-    background-color: #cdd6f4;
+    border: 5px solid rgba(30, 30, 46, 0.0); /* Полупрозрачный бордер */
+    background-color: rgba(30, 30, 46, 0.3); /* Прозрачный фон */
     border-radius: 15px;
+    backdrop-filter: blur(14px); /* Размытие фона */
 }
 
 #input {
@@ -12,24 +13,23 @@ window {
     border: none;
     color: #cdd6f4;
     font-weight: bold;
-    background-color: #1e1e2e;
-    background: ;
-   	outline: none;
+    background-color: rgba(30, 30, 46, 0.0); /* Прозрачность для ввода */
+    outline: none;
     border-radius: 15px;
     margin: 10px;
     margin-bottom: 2px;
 }
 #input:focus {
-    border: 0px solid #1e1e2e;
+    border: none;
     margin-bottom: 0px;
 }
 
 #inner-box {
     margin: 4px;
-    border: 10px solid #1e1e2e;
+    border: 10px solid rgba(30, 30, 46, 0.0); /* Прозрачный бордер */
     color: #cdd6f4;
     font-weight: bold;
-    background-color: #1e1e2e;
+    background-color: rgba(30, 30, 46, 0.0); /* Прозрачный фон */
     border-radius: 15px;
 }
 
@@ -37,7 +37,8 @@ window {
     margin: 0px;
     border: none;
     border-radius: 15px;
-    background-color: #1e1e2e;
+    background-color: rgba(30, 30, 46, 0.3); /* Прозрачный фон */
+    backdrop-filter: blur(20px); /* Размытие фона */
 }
 
 #scroll {
@@ -45,11 +46,11 @@ window {
     border: none;
     border-radius: 15px;
     margin-bottom: 5px;
-    /* background: rgb(255,255,255); */
+    background-color: rgba(30, 30, 46, 0.0); /* Прозрачный фон */
 }
 
 #img:selected {
-    background-color: #89b4fa;
+    background-color: rgba(137, 180, 250, 0.4); /* Полупрозрачный выделенный фон */
     border-radius: 15px;
 }
 
@@ -58,7 +59,7 @@ window {
     margin: 0px 0px;
     border: none;
     border-radius: 15px;
-    background-color: #89b4fa;
+    background-color: rgba(137, 180, 250, 0.0); /* Полупрозрачный выделенный фон */
 }
 
 #entry {
@@ -73,5 +74,6 @@ window {
     margin-top: 10px;
     border: none;
     border-radius: 15px;
-    background-color: #89b4fa;
+    background-color: rgba(137, 180, 250, 0.4); /* Полупрозрачный выделенный фон */
 }
+
