--- a/waybar/hypr-style.css
+++ b/waybar/hypr-style.css
@@ -184,6 +184,7 @@ tooltip {
 #backlight {
   padding-right: 0px;
   padding-left: 5px;
+  margin-right: 0px;
 }
 
 #custom-wallpaper {
@@ -287,6 +288,8 @@ tooltip {
 #pulseaudio {
   color: #cdd6f4;
   padding-right: 0px;
+  padding-right: 0px;
+  margin-right: 0px;
   /* color: #89b4fa; */
   border-left: 0px;
   border-right: 0px;
@@ -297,6 +300,7 @@ tooltip {
   color: #cdd6f4;
   /* color: #cba6f7; */
   border-left: 0px;
+  margin-left: 0px;
   border-right: 0px;
   border-radius: 0px 10px 10px 0px;
   margin-right: 5px;
